infra/k8s/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
  namespace: kafka
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: ayanabha1/yaara-user:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: kafka
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
  type: NodePort
  selector:
    app: user
