infra/k8s/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaara-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.yaara.com
      http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 8000
                  
          - path: /api/v1/creator
            pathType: Prefix
            backend:
              service:
                name: creator-svc
                port:
                  number: 8000
